--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,25 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer{
+  display: flex;
+  width:350px;
+  justify-content: space-between;
+}
+.field{
+  display: flex;
+  flex-direction: column;
+}
+.value{
+  font-size: 40px;
+  margin: auto;
+  font-weight: 600;
+  color: #142461;
+}
+.label{
+  margin: auto;
+  color: #458265;
+  text-transform: uppercase;
+  font-weight: 400;
+}
